<resources>
    <string name="app_name">uhf</string>

    <string name="Mask_Btn_T">Mask</string>
    <string name="Search_Btn_T">SEARCH</string>
    <string name="Read_Btn_T">READ</string>
    <string name="Write_Btn_T">WRITE</string>
    <string name="Name_item">Current Card(by EPC):</string>
    <string name="read_addr">Addr(hex)</string>
    <string name="read_count">Count</string>
    <string name="write_addr">Addr(hex)</string>
    <string name="write_count">Count</string>
    <string name="write_passwd">Password(hex)</string>
    <string name="Ok_btn">OK</string>
    <string name="Cancle_btn">Cancel</string>
    <string name="Item_Read">Read Card</string>
    <string name="Item_Write">Write Card</string>
    <string name="Item_Search">Search Card</string>
    <string name="Choose_Item">Please choose a card</string>
    <string name="Choose_Btn_T">Choose</string>
    <string name="Item_Choose">Choose a Card(by EPC)</string>
    <string name="Set_Btn">Set Param</string>
    <string name="Set_Btn_set">Set</string>
    <string name="Item_OutLevel">Output level</string>
    <string name="Item_Sensitivity">Sensitivity</string>
    <string name="Item_FreqStart">Start freq(Khz)</string>
    <string name="Item_FreqStop">End freq(Khz)</string>
    <string name="Item_FreqIncrement">Increment(Khz)</string>
    <string name="Item_Rssi">RSSI Threshold(dbm)</string>
    <string name="Item_Set_Title">SETTING</string>
    <string name="Set_Return_Btn">Go Back</string>
    <string name="Status_SetFreqOK">Set Freq Ok</string>
    <string name="Status_SetFreqFailed">Set Freq Failed</string>
    <string name="Status_SetOutputLevelOk">Set Output Level Ok</string>
    <string name="Status_SetOutputLevelFailed">Set Output Level Failed</string>
    <string name="Status_SetSensOK">Set Sensitivity Ok</string>
    <string name="Status_SetSensFailed">Set Sensitivity Failed</string>
    <string name="Status_InvalidNumber">Invalid Number or Character</string>
    <string name="Status_OutOfRange">Value is Out of Range</string>
    <string name="Status_Underflow">Value is too small</string>
    <string name="Status_comerror">Communication Error</string>
    <string name="TextView_Null"> </string>
    <string name="SetEPC_Btn">Set\nEPC</string>
    <string name="SetPasswd_Btn">Set Password</string>
    <string name="Lock_Btn">Lock/Unlock</string>
    <string name="Kill_Btn">Kill Tag</string>
    <string name="Item_Tag_EPC">Tag EPC</string>
    <string name="Item_Access_Pswd">Access Password</string>
    <string name="Item_Pswd_Type">Password Type</string>
    <string name="Item_New_Password">New Password</string>
    <string name="Item_EPC_Length">EPC Length(words)</string>
    <string name="Item_New_EPC">New EPC</string>
    <string name="Item_Lock_Area">Memory Space</string>
    <string name="Item_Lock_Action">Action</string>
    <string name="Start_Search_Btn">Start</string>
    <string name="Stop_Search_Btn">Stop</string>
    <string name="Status_Passwd_Length_Error">Password Length is Wrong</string>
    <string name="Status_Content_Length_Error">Content Length is Wrong</string>
    <string name="Status_Write_Error">Write Card Error</string>
    <string name="Status_Lock_Card_Error">Lock Card Error</string>
    <string name="Status_Wrong_Password_Type">Wrong Password Type</string>
    <string name="Status_Select_Card_Ok">Select Card Ok</string>
    <string name="Status_Select_Card_Faild">Select Card Faild</string>
    <string name="Status_Read_Card_Ok">Read OK</string>
    <string name="Status_Read_Card_Faild">Read Error</string>
    <string name="Status_Write_Card_Ok">Write Ok</string>
    <string name="Status_Write_Card_Faild">Write Faild</string>
    <string name="Status_No_Card_Select">No Card Selected</string>
    <string name="Status_Set_EPC_Error">Set EPC Error</string>
    <string name="Status_Read_Pc_Error">Read PC Error</string>
    <string name="Status_Freq_List_Full">Too Many Freq is add to list, Only some of success added.</string>
    <string name="SearchEAS_Btn">Search EAS</string>
    <string name="Item_EAS">Search EAS</string>

    <string name="if_status">Please select a protocol to demo</string>
    <string name="if_btn_6B">ISO18000-6B</string>
    <string name="if_btn_6C">ISO18000-6C</string>
    <string name="ISO6B_DEMO">Start Demo</string>

    <string name="DEV_OPEN_ERR">Device open failed！Software will quit！</string>
    <string name="DIA_ALERT">Warning！</string>
    <string name="DIA_CHECK">Confirm</string>
    <string name="VALUE_ZERO">00000000</string>
    <!--    <string name=""></string>  -->
    <string name="btn_set">SET</string>
    <string name="view_wt">work time</string>
    <string name="view_rt">rest time</string>
    <string name="btn_bk">back</string>
    <string name="cb_beep">beep new</string>
    <string name="text_null"></string>
    <string name="antenna_p">antenna power</string>
    <string name="spt">speed\ntest</string>
    <string name="sptss">start</string>
    <string name="inv_set">Inv\nSet</string>
    <string name="spinner_area_text">Read\Write Area</string>
    <string name="write_content">Content(hex)</string>
    <string name="mask_area">Area</string>
    <string name="mask_ok">Mask</string>
    <string name="mask_cancel">Cancel Mask</string>
    <string name="addr_bit">Addr(bit)</string>
    <string name="count_bit">Length(bit)</string>
</resources>
