<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_6b_status"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/mask_area" />

        <Spinner
            android:id="@+id/spinner_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/addr_bit" />

        <EditText
            android:id="@+id/editText_addr"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/count_bit" />

        <EditText
            android:id="@+id/editText_count"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/write_content" />

        <EditText
            android:id="@+id/editText_content"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="match_parent"
        android:textColor="#ea0404"
        android:layout_height="wrap_content"
        android:layout_weight="0.28"
        android:text="@string/TextView_Null" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_mask_ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/mask_ok" />
        <Button
            android:id="@+id/btn_mask_cancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/mask_cancel" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/Cancle_btn" />
    </LinearLayout>

</LinearLayout>